# AprendizajeAutomatico_PolitecnicoMA_EnzoMelian

./: README.md
Clases/Clase 2/: Clase2_AprendizajeAutomatico_EnzoMelian.ipynb
Clases/Clase 3/: Clase3_AprendizajeAutomatico_EnzoMelian.ipynb
Clases/Clase 4/: AprendizajeAutomatico_Clase4_EnzoMelian.ipynb
Clases/Clase 5/: AprendizajeAutomatico_Clase5_EnzoMelian.ipynb
Clases/Clase 6/: AprendizajeAutomatico_Clase6_EnzoMelian.ipynb
Clases/Clase 8/: AprendizajeAutomatico_Clase8_EnzoMelian.ipynb
proyecto_parcial/: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
proyecto_parcial/data/raw/: 1-expo_CEPII_BACI_mineras_mundiales_pais.csv  2-comex_CEPII_BACI_mineras_mundiales_sector_grupo.csv  3-expo_CEPII_BACI_mineras_mundiales_porcentajes_pais.csv  4-expominerales-siacam.csv
proyecto_parcial/docs/: mkdocs.yml
proyecto_parcial/docs/docs/: index.md
proyecto_parcial/notebooks/: AprendizajeAutomaticoParcial.ipynb
