[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "proyecto_parcial"
version = "0.0.1"
description = "Proyecto de parcial de la materia Aprendizaje Automatico - Modelo predictivo y segmentacion de la matriz minera argentina"
authors = [
  { name = "Enzo Melian" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["proyecto_parcial"]
include = ["pyproject.toml", "proyecto_parcial/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["proyecto_parcial"]
force-sort-within-sections = true

